ci(docs): switch Zensical installation from npm to pip
- Replace Node.js setup with Python setup action
- Update setup-python to v5 with Python 3.x
- Change installation command from npm to pip

--- a/.github/workflows/docs.yml
+++ b/.github/workflows/docs.yml
@@ -26,13 +26,13 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v4
 
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
+      - name: Setup Python
+        uses: actions/setup-python@v5
         with:
-          node-version: '20'
+          python-version: '3.x'
 
       - name: Install Zensical
-        run: npm install -g zensical
+        run: pip install zensical
 
       - name: Build documentation
         run: zensical build
